--- a/app/templates/admin/stats.html
+++ b/app/templates/admin/stats.html
@@ -2,36 +2,84 @@
 
 {% block body %}
 <h1 class="text-center">THỐNG KÊ BÁO CÁO</h1>
-<div>
-    <div>
-        <canvas id="myChart"></canvas>
+
+<form>
+    <div class="d-flex justify-content-around">
+        <div>
+            <label for="LoaiThongKe">Thống Kê:</label>
+            <select name="LoaiThongKe" id="LoaiThongKe">
+                <option value="Revenue">Doanh Thu</option>
+                <option value="Thuoc">Thuốc</option>
+            </select>
+        </div>
+        <div>
+            <label for="ThangThongKe">Tháng:</label>
+            <select name="ThangThongKe" id="ThangThongKe">
+                <option value="Thang1">Tháng 1</option>
+                <option value="Thang2">Tháng 2</option>
+                <option value="Thang3">Tháng 3</option>
+                <option value="Thang4">Tháng 4</option>
+                <option value="Thang5">Tháng 5</option>
+                <option value="Thang6">Tháng 6</option>
+                <option value="Thang7">Tháng 7</option>
+                <option value="Thang8">Tháng 8</option>
+                <option value="Thang9">Tháng 9</option>
+                <option value="Thang10">Tháng 10</option>
+                <option value="Thang11">Tháng 11</option>
+                <option value="Thang12">Tháng 12</option>
+            </select>
+        </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <div class="text-center">
+        <button class="thongke-btn" type="submit">THỐNG KÊ</button>
+    </div>
+</form>
+<div class="row">
+    <div class="col-md-7 col-12">
+        <div class="d-flex justify-content-around">
+            <h3>Ngày</h3>
+            <h3>Số Bệnh Nhân</h3>
+            <h3>Doanh Thu</h3>
+        </div>
+        <div>
+            {% for dt in doanhthu %}
 
-    <script>
-        const ctx = document.getElementById('myChart');
+            {% endfor %}
+            <div>
 
-        new Chart(ctx, {
-          type: 'bar',
-          data: {
-            labels: ['1', '2', '3', '4', '5', '6','7', '8', '9', '10', '11', '12'],
-            datasets: [{
-              label: 'Luong Thuoc Su Dung',
-              data: [6, 11, 3, 5, 2, 3, 0.1, 0.2, 3, 5, 2, 3],
-              borderWidth: 1
-            }]
-          },
-          options: {
-            scales: {
-              y: {
-                beginAtZero: true
+            </div>
+        </div>
+    </div>
+    <div class="col-md-5 col-12">
+
+        <div>
+            <canvas id="myChart"></canvas>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+        <script>
+            const ctx = document.getElementById('myChart');
+
+            new Chart(ctx, {
+              type: 'bar',
+              data: {
+                labels: ['1', '2', '3', '4', '5', '6','7', '8', '9', '10', '11', '12'],
+                datasets: [{
+                  label: 'Luong Thuoc Su Dung',
+                  data: [6, 11, 3, 5, 2, 3, 0.1, 0.2, 3, 5, 2, 3],
+                  borderWidth: 1
+                }]
+              },
+              options: {
+                scales: {
+                  y: {
+                    beginAtZero: true
+                  }
+                }
               }
-            }
-          }
-        });
-    </script>
-
+            });
+        </script>
+    </div>
 </div>
-
-
+<link rel="stylesheet" href="{{ url_for('static', filename= 'css/stats.css') }}">
 {% endblock %}
