--- a/app/templates/admin/stats.html
+++ b/app/templates/admin/stats.html
@@ -1,7 +1,7 @@
 {% extends 'admin/master.html' %}
 
 {% block body %}
-<h1 class="text-center">THỐNG KÊ BÁO CÁO</h1>
+<h1 class="text-primary text-center">THỐNG KÊ BÁO CÁO</h1>
 
 <form method="get">
     <div class="d-flex justify-content-around">
@@ -11,6 +11,10 @@
                 <option value="Revenue">Doanh Thu</option>
                 <option value="Drug">Thuốc</option>
             </select>
+        </div>
+        <div>
+            <label>Năm: </label>
+            <input type="number" min="0" id="NamThongKe" name="NamThongKe">
         </div>
         <div>
             <label for="ThangThongKe">Tháng:</label>
@@ -45,6 +49,11 @@
     </div>
 </form>
 <div class="row">
+    {% if not dstats and not rstats and not rstats_year and not dstats_year %}
+    <div class="col-12">
+        <h1 class="text-center mt-2 alert alert-info">Không Có Dữ Liệu</h1>
+    </div>
+    {% endif %}
     <div class="col-md-5 col-12">
         <table class="table d-flex justify-content-around">
             {% if rstats %}
@@ -73,7 +82,6 @@
                     {% endif %}
                 </td>
             </tr>
-
             {% endfor %}
             <tr>
                 <td>Tổng:</td>
@@ -83,11 +91,50 @@
             </tr>
             {% endif %}
 
+
+            <!-- Thống kê theo năm -->
+            {% if rstats_year %}
+            <tr>
+                <td>Tháng</td>
+                <td>Số bệnh nhân</td>
+                <td>Doanh Thu</td>
+                <td>Tỉ lệ</td>
+            </tr>
+            {% for s in rstats_year %}
+            <tr>
+                <td>{{ s[0] }}</td>
+                <td>{{ s[1] }}</td>
+                <td>
+                    {% if s[-1] %}
+                    {{ '{:,.0f}'.format(s[-1]) }} VNĐ
+                    {% else %}
+                    0 VNĐ
+                    {% endif %}
+                </td>
+                <td>
+                    {% if s[-1] %}
+                    {{ '{:,.1f}'.format(s[-1]/sum*100) }} %
+                    {% else %}
+                    0 %
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+            <tr>
+                <td>Tổng:</td>
+                <td></td>
+                <td>{{ '{:,.0f}'.format(sum) }} VNĐ</td>
+                <td>100 %</td>
+            </tr>
+            {% endif %}
+
+
+            <!-- Thống kê theo thuốc -->
             {% if dstats %}
             <tr>
                 <td>Tên Thuốc</td>
                 <td>Đơn Vị Thuốc</td>
-                <td>Số Lượng Thuôc</td>
+                <td>Số Lượng Thuốc</td>
                 <td>Số Lần Dùng</td>
             </tr>
             {% for s in dstats %}
@@ -99,13 +146,32 @@
             </tr>
             {% endfor %}
             {% endif %}
+
+
+            <!-- Thống kê theo thuốc năm -->
+            {% if dstats_year %}
+            <tr>
+                <td>Tháng</td>
+                <td>Tên Thuốc</td>
+                <td>Đơn Vị Thuốc</td>
+                <td>Số Lần Dùng</td>
+            </tr>
+            {% for s in dstats_year %}
+            <tr>
+                <td>{{ s[0] }}</td>
+                <td>{{ s[-3] }}</td>
+                <td>{{ s[-2] }}</td>
+                <td>{{ s[-1] }}</td>
+            </tr>
+            {% endfor %}
+            {% endif %}
+
         </table>
     </div>
     <div class="col-md-7 col-12">
         <div>
-            <canvas id="revenueChartId"></canvas>
+            <canvas id="chartId"></canvas>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script>
             let labels = []
             let data = []
@@ -127,7 +193,7 @@
 
             {% if rstats %}
             window.onload = function() {
-            const ctx = document.getElementById('revenueChartId')
+            const ctx = document.getElementById('chartId')
             loadChart(ctx, labels, data, 'bar', colors, borderColors)
             }
             {% endif %}
@@ -146,10 +212,56 @@
 
             {% if dstats %}
             window.onload = function() {
-            const ctx = document.getElementById('revenueChartId')
+            const ctx = document.getElementById('chartId')
             loadChart(ctx, labels, data, 'bar', colors, borderColors)
             }
             {% endif %}
+
+
+            {% if rstats_year %}
+                {% for s in rstats_year %}
+                {% if s[0] %}
+                labels.push('Tháng {{ s[0] }}')
+                data.push('{{ s[-1] }}')
+                r = parseInt(Math.random() * 255)
+                g = parseInt(Math.random() * 255)
+                b = parseInt(Math.random() * 255)
+                colors.push(`rgba(${r}, ${g}, ${b}, 0.2)`)
+                borderColors.push(`rgba(${r}, ${g}, ${b}, 1)`)
+                {% endif %}
+                {% endfor %}
+            {% endif %}
+
+            {% if rstats_year %}
+                window.onload = function() {
+                const ctx = document.getElementById('chartId')
+                loadChart(ctx, labels, data, 'bar', colors, borderColors)
+                }
+            {% endif %}
+
+
+            {% if dstats_year %}
+                {% for s in dstats_year %}
+                {% if s[0] %}
+                labels.push('{{s[1]}}{{s[0]}}')
+                data.push('{{ s[-1] }}')
+                r = parseInt(Math.random() * 255)
+                g = parseInt(Math.random() * 255)
+                b = parseInt(Math.random() * 255)
+                colors.push(`rgba(${r}, ${g}, ${b}, 0.2)`)
+                borderColors.push(`rgba(${r}, ${g}, ${b}, 1)`)
+                {% endif %}
+                {% endfor %}
+            {% endif %}
+
+            {% if dstats_year %}
+                window.onload = function() {
+                const ctx = document.getElementById('chartId')
+                loadChart(ctx, labels, data, 'bar', colors, borderColors)
+                }
+            {% endif %}
+
+
             function loadChart(ctx, labels, data, type, colors, borderColors){
             new Chart(ctx, {
               type: type,
@@ -171,10 +283,9 @@
                 }
               }
             });
-
-
             }
         </script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </div>
 </div>
 <link rel="stylesheet" href="{{ url_for('static', filename= 'css/stats.css') }}">
