Pay and PayDetail

--- a/app/templates/layout/footer.html
+++ b/app/templates/layout/footer.html
@@ -1,7 +1,7 @@
 {% block footer%}
 <div class="right-footer d-flex mt-2">
     <div >
-        <img class="logo" src="static/images/BeSTRONG.jpg" alt="Logo Phòng Khám">
+        <img class="logo" src="/static/images/BeSTRONG.jpg" alt="Logo Phòng Khám">
         <ul class="social-icon">
             <li class="social-icon__item"><a class="social-icon__link" href="#">
                 <ion-icon name="logo-facebook"></ion-icon>
