--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -3,7 +3,7 @@
 
 <nav class="navbar">
     <ul>
-        <li><a href="#home">Trang Chủ</a></li>
+        <li><a href="/">Trang Chủ</a></li>
         <li><a href="#about">Về Chúng Tôi</a></li>
         <li><a href="#doctor">Các Chuyên Gia</a></li>
         <li><a href="#review">Nhận Xét</a></li>
